<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/white"
    android:layout_gravity="center_vertical"
    android:gravity="center_vertical"
    android:paddingLeft="20dip"
    android:paddingRight="20dip" >
	<LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical">

		<ImageView
		    android:id="@+id/applogo"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:layout_gravity="center_horizontal"

		    android:layout_marginBottom="10dip" />
    	<TextView android:id="@+id/appname"
    	    android:layout_width="match_parent"
    	    android:layout_height="wrap_content"
    	    android:text="@string/app_name"
    	    android:textColor="@drawable/darkgray"
    	    android:textSize="26sp"
    	    
    	    android:layout_marginBottom="8dip"
    	    android:gravity="center"/>

		   	<AutoCompleteTextView android:id="@+id/userNameEdit"
		   	    android:layout_width="match_parent"
		   	    android:layout_height="wrap_content"
		   	    android:hint="@string/username"
		   	    />


		   	<EditText android:id="@+id/passwordEdit"
		   	    android:layout_width="match_parent"
		   	    android:layout_height="wrap_content"
		   	    android:hint="@string/password"
		   	    android:inputType="textPassword"
		   	    />

		<RadioGroup android:id="@+id/loginTiypeGroup"
		    android:layout_width="match_parent"
		    android:layout_height="50dip"
		    android:orientation="horizontal">
		   	<RadioButton android:id="@+id/userInfoLogin"
		   	    android:layout_width="150dip"
		   	    android:layout_height="wrap_content"
		   	    android:checked="true"
		   	    android:text="用户信息"
		   	    android:textColor="@drawable/darkgray"/>
		   	<RadioButton android:id="@+id/phoneIdLogin"
		   	    android:layout_width="150dip"
		   	    android:layout_height="wrap_content"
		   	    android:text="手机码识别"
		   	    android:textColor="@drawable/darkgray"/>
		</RadioGroup>
		<RelativeLayout android:id="@+id/bt_layout"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:layout_marginTop="3dip">
		    <!-- 注册按钮
			<ImageButton android:id="@+id/registerBt"
			    android:layout_width="80dip"
			    android:layout_height="45dip"
			    android:src="@drawable/registerbt"
			    android:background="@drawable/transparent_background"
			    android:layout_alignParentLeft="true"/>
			 -->
			<ImageButton android:id="@+id/loginBt"
			    android:layout_width="130dip"
			    android:layout_height="45dip"
			    android:src="@drawable/loginbt"
			    android:background="@drawable/transparent_background"
				android:layout_alignParentRight="true"
			    android:layout_marginRight="5dip"/>
		</RelativeLayout>

	</LinearLayout>
</LinearLayout>